# siegert-scatter

./: .pre-commit-config.yaml  .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/workflows/: lint_format_typecheck.yaml  publish.yml
scripts/: generate_bessel_zeros.py  zenodo_publish.py
scripts/KHe-example/: README.md  electron-structure-outputs.json  run_everything.py  schema.py
src/matlab/: SPS_script.m  SPS_test_quick.m  SPS_test_suite.m  TISE_by_SPS.m  calc_cross_section_by_SPS.m  calc_cross_section_by_SPS_with_total_AM.m  calc_z_l.m  get_gaussian_quadrature.m  j_polynomial.m  medfilt1.m  test_reference_output.txt  theta_l_z.nb
src/siegert_scatter/: __init__.py  cli.py  cross_section.py  perturbation.py  units.py
tests/: conftest.py  test_calc_z_l.py  test_cross_section.py  test_jacobi.py  test_medfilt1.py  test_quadrature.py  test_tise.py
