[project]
name = "siegert-scatter"
version = "0.1.0"
description = "Compute 1D and radial (partial-wave) Schrödinger scattering using the Siegert pseudostate (SPS) method, producing S-matrices, cross sections, Wigner time delays, and scattering lengths for user-defined potentials."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anatoli Tsinovoy", email = "anatoli.tsinovoy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []
keywords = [
    "scattering",
    "quantum mechanics",
    "Siegert pseudostates",
    "S-matrix",
    "cross section",
    "Wigner time delay",
    "scattering length",
    "partial-wave expansion",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/anatoli-tsinovoy/siegert-scatter"
Issues = "https://github.com/anatoli-tsinovoy/siegert-scatter/issues"
Changelog = "https://github.com/anatoli-tsinovoy/siegert-scatter/releases"

[project.scripts]
siegert-scatter = "siegert_scatter:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
